tests/typing/pass/ae/farray/farray_2.expected
File "tests/typing/pass/ae/farray/farray_2.ae", line 4, character 17-30:
4 | axiom a : forall t : 'a farray.
                     ^^^^^^^^^^^^^
Warning Shadowing: `t` was already declared at line 2, character 0-20
File "tests/typing/pass/ae/farray/farray_2.ae", line 5, character 3-11:
5 |    t[0] = 1
       ^^^^^^^^
Error The term: `1` has type `int` but was expected to be of type `'a`
